[package]
name = "py-spy"
version = "0.3.15"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/py-spy"
homepage = "https://github.com/benfred/py-spy"
description = "Sampling profiler for Python programs "
readme = "README.md"
exclude = ["images/*", "test_programs/*"]
license = "MIT"
build="build.rs"
edition="2021"

[dependencies]
anyhow = "1"
clap = {version="4.5.17", features=["wrap_help", "cargo", "derive"]}
clap_complete="4.5.26"
console = "0.15.8"
ctrlc = "3.4.5"
indicatif = "0.17.8"
env_logger = "0.11.5"
goblin = "0.8.2"
inferno = "0.11.21"
libc = "0.2.158"
log = "0.4.22"
lru = "0.12.4"
regex = "1.10.6"
tempfile = "3.12.0"
proc-maps = "0.3.2"
memmap2 = "0.9.5"
cpp_demangle = "0.4.4"
serde = {version="1.0.210", features=["rc"]}
serde_derive = "1.0.210"
serde_json = "1.0.128"
rand = "0.8.5"
rand_distr = "0.4.3"
remoteprocess = {version="0.4.12", features=["unwind"]}
chrono = "0.4.26"

[dev-dependencies]
py-spy-testdata = "0.1.0"

[target.'cfg(unix)'.dependencies]
termios = "0.3.3"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}
